<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearL"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_weight="1">

        <!-- Tecla DO -->
        <Button
            android:id="@+id/Perro"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:elevation="4dp"
            android:padding="10dp"
            android:text="@string/bDo"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="3dp"
            app:cornerRadius="0dp" />

        <!-- Tecla RE -->
        <Button
            android:id="@+id/Burro"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/bRe"
            android:layout_margin="3dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:elevation="4dp"
            android:padding="10dp"
            app:cornerRadius="0dp" />


        <!-- Tecla MI -->
        <Button
            android:id="@+id/Lobo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/bMi"
            android:layout_margin="3dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:elevation="4dp"
            android:padding="10dp"
            app:cornerRadius="0dp" />

        <!-- Tecla FA -->
        <Button
            android:id="@+id/Elefante"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/bFa"
            android:layout_margin="3dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:elevation="4dp"
            android:padding="10dp"
            app:cornerRadius="0dp" />

        <!-- Tecla SOL -->
        <Button
            android:id="@+id/Cabra"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/bSol"
            android:layout_margin="3dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:elevation="4dp"
            android:padding="10dp"
            app:cornerRadius="0dp" />

        <!-- Tecla LA -->
        <Button
            android:id="@+id/Vaca"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/bLa"
            android:layout_margin="3dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:elevation="4dp"
            android:padding="10dp"
            app:cornerRadius="0dp" />

        <!-- Tecla SI -->
        <Button
            android:id="@+id/Caballo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/bSi"
            android:layout_margin="3dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:elevation="4dp"
            android:padding="10dp"
            app:cornerRadius="0dp"/>

        <!-- Tecla DO ooctava -->
        <Button
            android:id="@+id/bDoOct"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/bDo"
            android:layout_margin="3dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:elevation="4dp"
            android:padding="10dp"
            app:cornerRadius="0dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>